# SimplePlayer

./: .gitignore  CMakeLists.txt
include/: SimplePlayer.h
src/: SimplePlayer.cpp  main.cpp
